# hegdenu.net

./: .gitignore  Cargo.toml  README.md  config.toml  cspell.config.yaml
content/: _index.md  about.md
content/drafts/: the-right-tool-for-the-job.md
content/posts/: commit-message-rant-1.md  commit-messages.md  debugging-tokio-instrumentation.md  how-big-is-your-future.md  initial-commit.md  inside-tokio-broadcast-channel.md  kubernetes-memory.md  lots-about-logging.md  not-working.md  performance-optimization-flamegraph-divan.md  rust-but-async.md  rustlab-2023-observing-tokio.md  scheduled-time.md  the-right-tool-for-the-job.md  tokio-waker-instrumentation.md  topology-spread-constraints-hpa.md  topology-spread-constraints.md  tracing-tokio-resources.md  tracing-tokio-tasks.md  tracing-tokio.md  track-caller.md  understanding-async-await-1.md  understanding-async-await-2.md  understanding-async-await-3.md  understanding-async-await-4.md  virtual-rust-meet-up.md
resources/debugging-tokio-instrumentation/: Cargo.toml
resources/debugging-tokio-instrumentation/src/: main.rs
resources/how-big-is-your-future/: Cargo.toml
resources/inside-tokio-broadcast-channel/: broadcast-channel-concept.excalidraw  broadcast-channel-structure.excalidraw
resources/kubernetes-memory/: kubernetes-memory.excalidraw
resources/logging-1/: Cargo.toml
resources/performance-optimization-flamegraph-divan/: corridor.excalidraw  flame_graph-1.excalidraw
resources/scheduled-time/: scheduled-time-v4.excalidraw
resources/tokio-tracing/: Cargo.toml
resources/tokio-tracing/src/: main.rs
resources/tracing-tokio-tasks/: Cargo.toml  README.md
resources/tracing-tokio-tasks/diagrams/: tracing-tokio-tasks.excalidraw
resources/tracing-tokio-tasks/src/: main.rs
templates/: _post_list.html  archive.html  base.html  index.html  page.html
(+45 files in other folders)
