[workspace]
resolver = "2"

members = [
    "resources/debugging-tokio-instrumentation",
    "resources/queues",
    "resources/tokio-with-the-console",
    "resources/tracing-examples",
    "resources/tracing-reload",
    "resources/tracing-tokio-tasks",
    "resources/track_caller",
    "resources/understanding-async-await",
]
