[package]
name = "debugging-tokio-instrumentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ari-subscriber = "0.0.1"
colored = "*"
tokio = { version = "=1.35.1", features = ["full", "tracing"] }
tracing = "=0.1.40"
tracing-subscriber = "=0.3.18"

[workspace]
